--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -48,7 +48,7 @@
                 <li><a href="#programmes">Kierunki</a></li>
                 <li><a href="#faculties">Jednostki</a></li>
                 <!--<li><a href="#friends">Znajomi</a></li>-->
-                <li><a href="#search">Szukaj</a></li>
+                <li><a href="#search">Katalog</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
         </div>
