--- a/web/static/templates/search.html
+++ b/web/static/templates/search.html
@@ -13,13 +13,14 @@
                             <option value="faculties">Wydział lub jednostkę</option>
                             <option value="programmes">Kierunek studiów </option>
                         </select>
-                        <input type="text" class="form-control" id="searchText" placeholder="Wpisz frazę" >
+                        <input type="text" class="form-control" id="searchText" placeholder="Wpisz frazę">
                         <button id="searchSubmit" type="submit" class="btn btn-default">Szukaj</button>
                     </form>
                 </div>
 
-                <div id="search_results"></div>
+                <div id="search_warning"></div>
 
+                <div id="search_results"></div>
             </div>
 
         </div>
