show PROJECT_TITLE on WWW intro page

--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -2,11 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                <h1>Witamy w <span>Kujon.mobi</span>!</h1>
-                <!--
-                <p>Dziękujemy za rejestrację. Kliknij dalej i przejdź do wyboru uczelni.</p>
-                <a href="wybor-uczelni.html" class="btn btn-default btn-welcome" type="submit">Przejdź dalej</a>
-                -->
+                <h1>Witamy w <span>{{PROJECT_TITLE}}</span>!</h1>
             </div>
         </div>
     </div>
