https://github.com/kujonmobi/kujon-server/issues/412

--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -41,7 +41,7 @@
                 <li><a href="#user">Użytkownik</a></li>
                 <li><a href="#tt">Plan</a></li>
                 <li><a href="#grades">Oceny</a></li>
-                <li><a href="#crstests">Sprawdziany</a></li>
+                <!-- <li><a href="#crstests">Sprawdziany</a></li> -->
                 <li><a href="#courses">Przedmioty</a></li>
                 <li><a href="#lecturers">Wykładowcy</a></li>
                 <li><a href="#terms">Cykle</a></li>
