--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Kujon - mobilny dostęp do Uczelni">
     <meta name="keywords" content="kujon, kujon.mobi, usos, usosweb na smartphone, uczelnia, aplikacja, uniwersytet">
 
+    <link hreflang="pl" href="{{ DEPLOY_WEB }}" rel="alternate"/>
+
     <link rel="shortcut icon" href="/static/favicon-blue.ico">
 
     <!-- Bootstrap -->
