--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -6,7 +6,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 heading">
-                        <h2 class="skorzystaj-z-pomocy">Strona o podanym adresie nie istnieje</h2>
+                        <h2 class="skorzystaj-z-pomocy">Strona o podanym adresie nie istnieje.</h2>
                         <p>Masz jakieś pytania lub problemy z korzystaniem z aplikacji?
                             <a href="/#contact">Napisz do nas.</a>
                         </p>
