--- a/web/templates/disclaimer.html
+++ b/web/templates/disclaimer.html
@@ -107,7 +107,7 @@
                         <h2>IV. KORZYSTANIE Z APLIKACJI</h2>
                         <ol>
                             <li>Aby skorzystać z Kujon użytkownik musi posiadać Smartfon, lub inne urządzenia z systemem
-                                operacyjnym Android lub Apple, użądzenie musi posiadać dostęp do Internetu oraz usług
+                                operacyjnym Android lub Apple, urządzenie musi posiadać dostęp do Internetu oraz usług
                                 lokalizacyjnych.
                             </li>
                             <li>Wszystkie wiadomości oraz zdjęcia wymieniane podczas korzystania z Kujon są tymczasowe i
@@ -124,7 +124,7 @@
                                 Autorskim z of 1994.
                             </li>
                             <li>Z chwilą rozpoczęcia korzystania z Kujon, Operator udziela użytkownikowi licencji na
-                                korzystanie z Kujon na jego urządzeniu mobilnym. Użytkownik nie masz wyłącznego prawa do
+                                korzystanie z Kujon na jego urządzeniu mobilnym. Użytkownik nie ma wyłącznego prawa do
                                 korzystania z tej licencji, jak również nie ma prawa
                                 do jej przenoszenia ani dysponowania nią.
                             </li>
