porzadki w usosach, dodanie UR w Krakowie

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Kujon - mobilny dostęp do danych studenckich</title>
-    <meta name="description" content="Kujon - mobilny dostęp do Uczelni">
+    <title>Kujon - klient USOS</title>
+    <meta name="description" content="Kujon - klient USOS">
     <meta name="keywords" content="kujon, kujon.mobi, usos, usosweb na smartphone, uczelnia, aplikacja, uniwersytet">
 
     <link rel="shortcut icon" href="/static/favicon-blue.ico">
