--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -398,7 +398,7 @@ th.header{cursor:pointer;}
 @media (max-width: 1200px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:604px;}#pomoc {padding-bottom: 50px;padding-top: 140px;}.landing-page>#demo{padding:70px 0 90px 0;}
 }
 @media (max-width: 1000px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 604px;}#pomoc {padding-bottom: 50px;padding-top: 125px;margin-bottom: 80px;}.landing-page footer .nav{margin-left:-15px;}}
-@media (max-width: 991px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 511px;}.landing-page>#demo{padding:0px 0 20px 0;}} 
+@media (max-width: 991px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 511px;}.landing-page>#demo{padding:0px 0 20px 0;}}
 @media (max-width:766px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 583px;}#pomoc {padding-bottom: 50px;padding-top: 125px;margin-bottom: 60px;}.landing-page>#demo{padding:0px 0 0px 0;}.landing-page footer .nav{margin-left:-10px;}}
 @media (max-width:700px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:548px;}#pomoc {padding-bottom: 50px;padding-top: 125px;margin-bottom: 50px;}}
 @media (max-width:650px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:522px;}#pomoc {padding-bottom: 50px;padding-top: 100px;margin-bottom: 40px;}}
@@ -408,7 +408,7 @@ th.header{cursor:pointer;}
 header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 685px;}
 #pomoc {padding-bottom: 50px;padding-top: 170px;}
  }
- 
+
 .intro-header {margin: 40px auto 30px auto;width: 100%;}
 .intro-header>h1 {width: 100%;color: white;font-size: 32px;line-height: 1.3;font-weight: 400;}
 .white {background: white;padding: 8px 40px;color: black;border: none;font-size: 16px;margin-top: 10px;transition: All 0.2s linear;-webkit-transition: All 0.2s linear;-moz-transition: All 0.2s linear;-o-transition: All 0.2s linear;}
@@ -446,7 +446,7 @@ header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 685px;}
 .logowanie-modal>.modal-dialog>.modal-content>.modal-body>.col-sm-12>.col-sm-2>span {font-size: 14px;}
 .hr-left {padding-left: 0;}
 .hr-right {padding-right: 0;}
-	
+
 /*media*/
 @media (min-width: 768px){
 header{background: url('../img/header.jpg') no-repeat;width:100%;background-size: cover;background-position-x: center;background-position-y: center;}
@@ -460,12 +460,12 @@ header{background: url('../img/header.jpg') no-repeat;width:100%;background-size
 @media (max-width: 560px){
 .navbar-form {padding: 0px;}
 }
-@media (max-width:1109px) { 
+@media (max-width:1109px) {
 .navbar-landing>.container>.slide-active>ul>li:first-child {border-bottom: 1px solid #444;}
 button.btn.btn-group.log.logowanie {padding: 0;border: none;padding: 17px 20px;margin: 0;font-size: 18px;}
 
 }
-@media (max-width:767px) { 
+@media (max-width:767px) {
 header{background: url('../img/header.jpg') no-repeat;width:100%;background-size: cover;background-position-x: center;background-position-y: center;}
 #wybor-uczelni>.container>.row>.col-sm-12>.form-group>input {padding: 2% 0 0 40px;    background: url(../img/search.png) no-repeat 3% 57%;}
 .navbar-landing.slide-active{position:fixed;}
@@ -530,18 +530,18 @@ body.slide-active {overflow-x: hidden;padding:0;}
 .navbar-nav>li>a {padding-top: 19px;padding-bottom: 20px;}
 #friends>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6{padding:0;margin-top:30px;}
 }
-	
+
 
 .first-nav-pagination>a{border-top-left-radius: 4px;border-bottom-left-radius: 4px;}
 .last-nav-pagination>a{border-top-right-radius: 4px;border-bottom-right-radius: 4px;}
 tr.detail-view>td{padding:15px !important;}
 tr.detail-view>td>.col-sm-12{padding:15px;}
 
-	
-	
+
+
 /*errror*/
 .error{margin-top: 50px;min-height:auto;}
-	
+
 
 @media (min-width: 1111px) {
 	.navbar {
@@ -575,7 +575,7 @@ tr.detail-view>td>.col-sm-12{padding:15px;}
 @media (max-width: 1110px) {
 	.logowanie-modal>.modal-dialog>.modal-content>.modal-header>.col-sm-12>button {
     margin-top: 0px;
-	
+
 }
 
 .navbar-landing>.container>.navbar-header>button>span{background:white;}
@@ -853,7 +853,7 @@ table>tbody>tr>td:last-child, table>tbody>tr>th:last-child, table>tfoot>tr>td:la
 }
 .dataTables_paginate>.paginate_button.previous{border-radius:4px;margin-right:15px;    padding: 6px 14px;}
 .dataTables_paginate>.paginate_button.next{border-radius:4px;margin-left:15px;    padding: 6px 14px;}
- 
+
 .dataTables_wrapper>div>div>table>thead>tr>th, table>thead>tr>th {
 	  cursor: pointer;
     background-position: 98%;
@@ -942,7 +942,7 @@ border-radius: 4px;}
 }
 }
 @media (max-width: 1000px){
-	
+
 #grades .dataTables_wrapper .dataTables_filter {
      position: relative;
 	float:left;margin-left: -5px;
@@ -969,7 +969,7 @@ float:left;margin-left: -5px;}
 	.heading {
     margin-bottom: 20px;
 }
-	
+
 }
 #faculties td:nth-child(2){text-align:center;}
 #faculties td:nth-child(2)>img{max-width:80px;}
@@ -994,12 +994,12 @@ float:left;margin-left: -5px;}
     border-left:0;
 }
 td.details-control:before {
-	 font-family: 'Glyphicons Halflings'; 
+	 font-family: 'Glyphicons Halflings';
 	content:"\e259";
     cursor: pointer;
 }
 tr.shown td.details-control:before {
-	 font-family: 'Glyphicons Halflings'; 
+	 font-family: 'Glyphicons Halflings';
 	content:"\e260";
 }
 table.dataTable tbody td.no-padding {
@@ -1028,7 +1028,7 @@ padding: 0;}
 .slider tr>td{border:none;}
 .slider tr{border:none;}
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
-     border-top: 1px solid #ddd; 
+     border-top: 1px solid #ddd;
 }
 .slider{    padding: 5px 30px;}
 .slider>table>tbody>tr>td{border:none;border-top:none !important;text-align:left;}
@@ -1159,7 +1159,7 @@ a.cookiebar-close{text-decoration:none;}
 #cookie-bar .cb-policy{float:left;padding:12px 0;}
 
 
-@media screen and (min-width: 1110px) and (max-width: 1200px) { 
+@media screen and (min-width: 1110px) and (max-width: 1200px) {
 
 .nawigacja-app.navbar-default .navbar-left > li > a {
     color: #2b2b2b;
@@ -1176,3 +1176,37 @@ margin:5px 0;    float: left !important;
 }
 }
 
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
