--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -174,6 +174,21 @@
                         <a href="{{API_URL}}/authentication/google" type="button"
                            class="btn btn-danger btn-lg btn-block">Zaloguj się przez <span>Google+</span></a>
                     </div>
+                    <div class="col-sm-12 col-xs-12">
+                        <div class="col-sm-5 col-xs-5 hr-left">
+                            <hr/>
+                        </div>
+                        <div class="col-sm-2 col-xs-2 text-center">
+                            <span>lub</span>
+                        </div>
+                        <div class="col-sm-5 col-xs-5 hr-right">
+                            <hr/>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xs-12">
+                        <a href="{{DEPLOY_WEB}}/login" type="button"
+                           class="btn btn-success btn-lg btn-block">Zaloguj się z wykorzystaniem email.</span></a>
+                    </div>
                 </div>
             </div>
         </div>
