--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -11,7 +11,8 @@
 
     <link hreflang="pl" href="{{ DEPLOY_WEB }}" rel="alternate"/>
 
-    <link rel="shortcut icon" href="/static/favicon-blue.ico">
+    <link rel="shortcut icon" href="/static/favico.ico">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap -->
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
