--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -17,8 +17,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo-app.png"
-                                                              class="img-responsive"/></a>
+            <!--navbar-brand page-scroll-->
+            <a class="pull-left" href="/"><img src="/static/img/logo-landing.png"
+                                               class="img-responsive"/><strong>Kujon</strong>.mobi</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
