--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,8 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo-landing.png"
-                                                              class="img-responsive"/></a>
+            <a class="navbar-brand page-scroll pull-left" href="/"><img src="/static/img/logo-landing.png"/></a>
         </div>
         <div id="slidemenu">
             <ul class="nav navbar-nav navbar-right">
