--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -3,7 +3,40 @@
 <script type="text/javascript" data-main="/static/js/startup.js"
         src="/static/bower_components/requirejs/require.js"></script>
 
-{% end %} {% block navigation %} {% end %} {% block main %} {% module xsrf_form_html() %}
+{% end %} {% block navigation %}
+<nav class="navbar navbar-default nawigacja-app navbar-fixed-top" role="navigation" id="slide-nav">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="pull-left" href="profil.html"><img src="/static/img/logo-landing.png"
+                                                         class="img-responsive"/></a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div id="slidemenu">
+            <ul class="nav navbar-nav navbar-right ">
+                <li>
+                    <a class="btn btn-group" href="{{API_URL}}/authentication/archive">
+                        Skasuj konto
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-group" href="{{API_URL}}/authentication/logout">
+                        Wyloguj się
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+{% end %} {% block main %} {% module xsrf_form_html() %}
 <!-- page content -->
 <div class="container">
 
