--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -18,8 +18,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!--navbar-brand page-scroll-->
-            <a class="pull-left" href="/"><img src="/static/img/logo-landing.png"
-                                               class="img-responsive"/><strong>Kujon</strong>.mobi</a>
+            <a class="navbar-brand page-scroll" href="/"><img class="pull-left" src="/static/img/logo-landing.png"/></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
