AuthenticationError: Nie przekazano odpowiednich parametrów.

--- a/web/templates/login_register.html
+++ b/web/templates/login_register.html
@@ -107,6 +107,8 @@
                 'email': $('#inputEmail').val(),
                 'password': $('#inputPassword').val(),
                 'password2': $('#inputPassword2').val(),
+                'device_type': 'WWW',
+                'device_id': 'WWW'
             };
 
             $.ajax({
