--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <p class="footer-block">Copyright 2016 by <a href="http://kujon.mobi">Kujon.mobi</a>. All rights
+                    <p class="footer-block">Copyright 2016 by <a href="{{DEPLOY_WEB}}">Kujon.mobi</a>. All rights
                         reserved.
                     </p>
                 </div>
