--- a/web/static/templates/programmes.html
+++ b/web/static/templates/programmes.html
@@ -13,6 +13,7 @@
                         <th data-sortable="true">Poziom</th>
                         <th data-sortable="true">Tryb</th>
                         <th data-sortable="true">Długość</th>
+                        <th data-sortable="true">Suma punktów ECTS</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -23,6 +24,7 @@
                         <td>{{programme.level_of_studies}}</td>
                         <td>{{programme.mode_of_studies}}</td>
                         <td>{{programme.duration}}</td>
+                        <td>{{programme.ects_used_sum}}</td>
                     </tr>
                     {{/data}}
                     </tbody>
