remote trailing comma

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -86,7 +86,7 @@
 
             var formData = {
                 'email': $('#inputEmail').val(),
-                'password': $('#inputPassword').val(),
+                'password': $('#inputPassword').val()
             };
 
             $.ajax({
