--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -85,8 +85,8 @@
             event.preventDefault();
 
             var formData = {
-                'email': $('#inputEmail').val(),
-                'password': $('#inputPassword').val()
+                "email": $('#inputEmail').val(),
+                "password": $('#inputPassword').val()
             };
 
             $.ajax({
