--- a/web/templates/login_register.html
+++ b/web/templates/login_register.html
@@ -104,11 +104,11 @@
             }
 
             var formData = {
-                'email': $('#inputEmail').val(),
-                'password': $('#inputPassword').val(),
-                'password2': $('#inputPassword2').val(),
-                'device_type': 'WWW',
-                'device_id': 'WWW'
+                "email": $('#inputEmail').val(),
+                "password": $('#inputPassword').val(),
+                "password2": $('#inputPassword2').val(),
+                "device_type": "WWW",
+                "device_id": "WWW"
             };
 
             $.ajax({
